--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,23 @@
+# Local .terragrunt-cache directories
+**/.terragrunt-cache/*
+.terragrunt-cache
+
+.terragrunt*
+
 # Local .terraform directories
 **/.terraform/*
+.terraform
 
 # .tfstate files
 *.tfstate
 *.tfstate.*
 
+.terraform.lock.hcl
+
 # Crash log files
 crash.log
 crash.*.log
 
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
-*.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -32,3 +35,11 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+howto
+account.id
+
+.infracost
+infracost-*.json
+
+.ignore-*
