--- a/terraform/helm-charts/karpenter-nodes/values.yaml
+++ b/terraform/helm-charts/karpenter-nodes/values.yaml
@@ -4,10 +4,35 @@ nodeClassName: default
 eksNodeGroupIAMRole: ""
 discoveryTag: ""
 
-cpuLimits: 1000
-memoryLimitsGi: 20
-expireAfterH: 1
+# Resource limits constrain the total size of the cluster.
+# Limits prevent Karpenter from creating new instances once the limit is exceeded.
+limits:
+  cpu: "100"
+  memory: 10Gi
 
+# Disruption section which describes the ways in which Karpenter can disrupt and replace Nodes
+# Configuration in this section constrains how aggressive Karpenter can be with performing operations
+# like rolling Nodes due to them hitting their maximum lifetime (expiry) or scaling down nodes to reduce cluster cost
+disruption:
+    # Describes which types of Nodes Karpenter should consider for consolidation
+    # If using 'WhenUnderutilized', Karpenter will consider all nodes for consolidation and attempt to remove or replace Nodes when it discovers that the Node is underutilized and could be changed to reduce cost
+    # If using `WhenEmpty`, Karpenter will only consider nodes for consolidation that contain no workload pods
+    consolidationPolicy: WhenUnderutilized
+    
+    # The amount of time Karpenter should wait after discovering a consolidation decision
+    # This value can currently only be set when the consolidationPolicy is 'WhenEmpty'
+    # You can choose to disable consolidation entirely by setting the string value 'Never' here
+    consolidateAfter: 30s
+    
+    # The amount of time a Node can live on the cluster before being removed
+    # Avoiding long-running Nodes helps to reduce security vulnerabilities as well as to reduce the chance of issues that can plague Nodes with long uptimes such as file fragmentation or memory leaks from system processes
+    # You can choose to disable expiration entirely by setting the string value 'Never' here
+    expireAfter: 720h
+
+# Requirements that constrain the parameters of provisioned nodes.
+# These requirements are combined with pod.spec.topologySpreadConstraints, pod.spec.affinity.nodeAffinity, pod.spec.affinity.podAffinity, and pod.spec.nodeSelector rules.
+# Operators { In, NotIn, Exists, DoesNotExist, Gt, and Lt } are supported.
+# https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#operators
 nodepool_requirements:
 - key: kubernetes.io/arch
   operator: In
